# tgv

./: .gitignore  CMakeLists.txt  README.md  fragment.glsl  imgui.ini  makefile  readme.md  tgv  vertex.glsl
core/: fbtg_callbacks.cpp  fbtg_core.cpp  main.cpp
etc/: fbtg_gen.cpp  plugin_system.cpp
include/: chunk.h  core.h  emit.hpp  fbtg_core.h  fbtg_gen.h  fbtg_render.h  function_loader.h  helper.h  render.h  shader_program.h  simple_camera.h  simple_generator.h  simple_renderer.h  simple_terrain_lib.h  terrain.h
libs/: libglfw.so.3
rendering/: fbtg_render.cpp
shaders/: fragment.glsl  skybox_fragment.glsl  vertex.glsl
src/: core.cpp  helper.cpp  main.cpp  render.cpp
